--- a/src/PIMS.API/appsettings.example.json
+++ b/src/PIMS.API/appsettings.example.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=pims;User=sa;Password=Test@123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
