--- a/src/PIMS.API/PIMS.API.csproj
+++ b/src/PIMS.API/PIMS.API.csproj
@@ -17,4 +17,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
 </Project>
